--- a/package.json
+++ b/package.json
@@ -1,51 +1,46 @@
 {
-  "name": "wd_s",
+  "name": "_s",
   "version": "1.0.0",
   "description": "A theme boilerplate for WebDevStudios.",
-  "main": "Gulpfile.js",
-  "dependencies": {
-    "autoprefixer": "^6.3.1",
-    "bourbon": "^4.2.6",
-    "bourbon-neat": "^1.7.2",
-    "browser-sync": "^2.11.1",
-    "css-mqpacker": "^4.0.0",
-    "del": "^2.2.0",
-    "glob": "^6.0.4",
-    "gulp": "^3.9.1",
-    "gulp-cheerio": "^0.6.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-cssnano": "^2.1.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.2.0",
-    "gulp-sass-lint": "^1.1.1",
-    "gulp-sort": "^1.1.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-svgmin": "^1.2.1",
-    "gulp-svgstore": "^5.0.5",
-    "gulp-uglify": "^1.5.2",
-    "gulp-util": "^3.0.7",
-    "gulp-wp-pot": "^1.1.1",
-    "gulp.spritesmith": "^6.2.0"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"No test specified\""
-  },
+  "author": "WebDevStudios",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/WebDevStudios/wd_s.git"
+    "url": "https://github.com/WebDevStudios/wd_s"
   },
-  "keywords": [
-    "theme"
-  ],
-  "author": "WebDevStudios",
-  "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/WebDevStudios/wd_s/issues"
+    "url": "https://github.com/WebDevStudios/wd_s/issues/"
   },
-  "homepage": "https://github.com/WebDevStudios/wd_s#readme"
+  "dependencies": {
+    "autoprefixer": "^6.3.2",
+    "bourbon": "^4.2.6",
+    "bourbon-neat": "^1.7.2",
+    "css-mqpacker": "^4.0.0",
+    "glob": "^7.0.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-contrib-jshint": "^0.12.0",
+    "grunt-contrib-uglify": "^0.11.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-cssnano": "^2.0.1",
+    "grunt-githooks": "^0.5.0",
+    "grunt-newer": "^1.1.1",
+    "grunt-notify": "^0.4.3",
+    "grunt-phpcs": "^0.4.0",
+    "grunt-postcss": "^0.7.1",
+    "grunt-sass": "^1.1.0",
+    "grunt-sassdoc": "^2.0.1",
+    "grunt-shell": "^1.1.2",
+    "grunt-spritesmith": "^6.3.0",
+    "grunt-svgmin": "^3.1.2",
+    "grunt-svgstore": "^0.5.0",
+    "grunt-wp-i18n": "^0.5.3",
+    "load-grunt-tasks": "^3.4.0"
+  },
+  "license": "GPL-2.0+",
+  "devDependencies": {
+    "sass-loader": "^3.2.0",
+    "susy": "^2.2.12",
+    "webpack": "^1.13.1"
+  }
 }
