--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Simple Photo Blog",
+  "name": "Simple-Photo-Blog",
   "version": "1.0.0",
   "description": "A Simple Theme For Photo Bloggers",
   "author": "Anthony Skelton",
